<resources>
    <string name="app_name">Phone Shop</string>
    <string name="login">Bejelentkezés</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="google_account">Google Fiók</string>
    <string name="login_as_guest">Vendég</string>
    <string name="register">Regisztráció</string>
    <string name="cancel">Mégse</string>
    <string name="username">Felhasználónév</string>
    <string name="password_again">Jelszó ismétlése</string>
    <string name="profile">Profil</string>
    <string name="product_item_title_placeholder">Termék neve</string>
    <string name="product_item_description_placeholder">Termék leírása</string>
    <string name="add_to_cart">Kosárba</string>
    <string name="storage_empty">Tárhely:</string>
    <string name="storage">Tárhely</string>
    <string name="ram_empty">RAM:</string>
    <string name="ram">RAM</string>
    <string name="search">Keresés</string>
    <string name="logout">Kijelentkezés</string>
    <string name="settings">Beállítások</string>
    <string name="cart">Kosár</string>
    <string name="view">Nézet</string>
    <string name="delete">Törlés</string>
    <string name="save">Mentés</string>
    <string name="edit">Szerkesztés</string>
    <string name="create">Létrehozás</string>
    <string name="price">Ár</string>
    <string name="filter">Szűrés</string>
    <string name="popular_products">Népszerű termékek</string>
    <string name="cheap_phones">Olcsó telefonok</string>
    <string name="best_rated">Legjobbra értékelt</string>

    <string-array name="product_item_names">
        <item>Nothing Phone (2a)</item>
        <item>Nothing CMF Phone 1</item>
        <item>vivo V40 SE</item>
        <item>Samsung Galaxy A55</item>
        <item>Samsung Galaxy S21 FE 5G</item>
        <item>Xiaomi Redmi Note 14 Pro 5G</item>
        <item>Tecno Pova 6 Pro</item>
        <item>OnePlus Nord CE4</item>
    </string-array>

    <string-array name="product_item_storages">
        <item>128GB, 256GB</item>
        <item>128GB, 256GB</item>
        <item>256GB</item>
        <item>128GB, 256GB</item>
        <item>128GB, 256GB</item>
        <item>256GB, 512GB</item>
        <item>256GB</item>
        <item>128GB, 256GB</item>
    </string-array>

    <string-array name="product_item_rams">
        <item>8GB, 12GB</item>
        <item>6GB, 8GB</item>
        <item>8GB</item>
        <item>6GB, 8GB, 12GB</item>
        <item>6GB, 8GB</item>
        <item>8GB, 12GB</item>
        <item>8GB, 12GB</item>
        <item>8GB</item>
    </string-array>

    <array name="product_item_prices">
        <item>97000</item>
        <item>93000</item>
        <item>72999</item>
        <item>122999</item>
        <item>81499</item>
        <item>109999</item>
        <item>108999</item>
        <item>89999</item>
    </array>

    <array name="product_item_rates">
        <item>4.4</item>
        <item>4.7</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>3.2</item>
        <item>3.6</item>
        <item>2.3</item>
        <item>4.0</item>
    </array>

    <array name="product_item_images">
        <item>@drawable/nothing_phone_2a</item>
        <item>@drawable/nothing_cmf_phone_1</item>
        <item>@drawable/vivo_v40_se</item>
        <item>@drawable/samsung_galaxy_a55</item>
        <item>@drawable/samsung_galaxy_s21_fe_5g</item>
        <item>@drawable/xiaomi_redmi_note_14_pro_5g</item>
        <item>@drawable/tecno_pova_6_pro</item>
        <item>@drawable/oneplus_nord_ce4</item>
    </array>

</resources>