<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchBar"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/cartButton"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_menu_item"
        />
    <item
        android:id="@+id/createButton"
        android:title="@string/create"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/filterButton"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/filter_popular"
                android:title="@string/popular_products" />
            <item
                android:id="@+id/filter_budget"
                android:title="@string/cheap_phones" />
            <item
                android:id="@+id/filter_top_rated"
                android:title="@string/best_rated" />
        </menu>
    </item>
    <item
        android:id="@+id/viewSelector"
        android:title="@string/view"
        android:icon="@drawable/ic_view_row"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/settingsButton"
        android:title="@string/settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/logoutButton"
        android:title="@string/logout"
        app:showAsAction="never"
        />
</menu>