<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/small_padding">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp">

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/product_item_title_placeholder"
                android:textColor="?android:textColorSecondary"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/storageLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/itemTitle">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/storage_empty" />

                <TextView
                    android:id="@+id/itemStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ramLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/storageLinearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/ram_empty" />

                <TextView
                    android:id="@+id/itemRAM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/itemRatingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ramLinearLayout"
                android:isIndicator="true"
                android:numStars="5"
                android:padding="@dimen/small_padding" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemRatingBar"
                android:padding="@dimen/small_padding"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/buttonsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_below="@id/itemPrice">

                <ImageButton
                    android:id="@+id/addToCartButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/icon_padding"
                    android:backgroundTint="@color/icon"
                    android:src="@drawable/ic_add_to_cart" />

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/icon_padding"
                    android:backgroundTint="@color/icon"
                    android:src="@drawable/ic_delete" />

                <ImageButton
                    android:id="@+id/editButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/icon_padding"
                    android:backgroundTint="@color/icon"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
